# freeloader

./: .gitignore  AGENT.md  CLAUDE.md  JOURNAL.jsonl  KNOWN-LIMITATIONS.md  PLAN.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml
docs/: DEPLOYMENT.md
scripts/: advance.sh  gate_1.sh  gate_2.sh  gate_3.sh  gate_4.sh  gate_5.sh  gate_common.sh  orient.sh  reflect.sh  setup-host.sh
src/freeloader/: config.py  lifecycle.py  router.py  storage.py
src/freeloader/adapters/: _subprocess.py  (+3 more)
tests/: conftest.py  test_lifecycle_cli_state_purge.py  test_router_state_machine.py  test_scaffold.py
tests/adapters/: test_claude_golden.py  test_claude_sandbox.py  test_claude_state_isolation.py  test_codex_golden.py  test_codex_state_isolation.py  test_codex_stderr_429.py  test_contract_all.py  test_gemini_compound.py  test_gemini_golden.py  test_gemini_serialization.py  test_gemini_stderr_429.py
tests/canonical/: test_history_diff.py
tests/core/: test_config_thresholds.py  test_quota_claude_rate_limit.py  test_quota_inference.py  test_quota_stderr_429.py  test_quota_stderr_429_router.py  test_rebind_replay.py  test_router_round_robin.py  test_routing_quota_aware.py  test_routing_replay.py  test_turn_state.py  test_turn_timeout.py
tests/e2e/: test_claude_two_turn.py  test_tool_calls.py
tests/frontend/: test_chat_completions_nonstreaming.py  test_disconnect_no_zombies.py  test_memory_inheritance_check.py  test_models_endpoint.py  test_sse_shape.py  test_streaming.py  test_tools_stripped.py
tests/smoke/: test_claude_live.py  test_codex_live.py  test_gemini_live.py
(+17 files in other folders)
